# DxCommon

./: README.md
Agent/: README.md
AzureIaC/: README.md
AzureIaC/AddUsers/: README.md
AzureIaC/Simplest/: 1.common.sh  2.jumpbox_vm.sh  3.sandbox.sh  4.vnet_peering.sh  README.md
AzureIaC/SingleVM/: Linux.md  README.md  Windows.md
AzureIaC/Storage/: README.md
Device/: README.md
Device/CSharp/: README.md
Device/NodeRED/: README.md
Edge/: README.md
Edge/Mosquitto/: README.md
Edge/RabbitMQ/: README.md
Edge/certs/: 2_server.bat  3_client.bat  README.md
Notebook/: docker-compose_tensorflow.yaml
Notebook/Jupyter/: 1_DockerComposeUp_pyspark.bat  1_DockerComposeUp_tensorflow.bat  README.md  docker-compose_pyspark.yaml
Notebook/JupyterNotebook/: README.md
Notebook/path/: BuildingEnvironment.ipynb  CheckGPUWithPython.ipynb  KasagoCNN2.ipynb  KasagoDL2.ipynb  LLM_Fine-tuning1.ipynb  LLM_Fine-tuning2.ipynb  LLM_FixedPointObservation.ipynb  LLM_LlamaIndex1.ipynb  LLM_LlamaIndex2.ipynb  LLM_LlamaIndex4.ipynb  LLM_Ollama.ipynb  LoadEnvFrom_dotenv.ipynb  MatplotlibTraining.ipynb  NekozameRNN1.ipynb  NekozameRNN3.ipynb  NekozameRNN4.ipynb  NekozameVector2.ipynb  PlaiceDRL2.ipynb  PlaiceDRL3.ipynb  PyTorch0.ipynb  (+9 more)
Notebook/path/ed-donner_agents/3_crew/jp_crew/: README.md  STDIO.md  pyproject.toml  report.md
Notebook/path/ed-donner_agents/3_crew/jp_crew/src/jp_crew/: crew.py  main.py
Notebook/path/ed-donner_agents/3_crew/jp_crew/src/jp_crew/config/: agents.yaml  tasks.yaml
Notebook/path/ed-donner_agents/3_crew/jp_crew/src/jp_crew/tools/: custom_tool.py
(+416 files in other folders)
