[project]
name = "jp_crew"
version = "0.1.0"
description = "jp_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
jp_crew = "jp_crew.main:run"
run_crew = "jp_crew.main:run"
train = "jp_crew.main:train"
replay = "jp_crew.main:replay"
test = "jp_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
